# disc-pal

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
disc_pal/: config_default.yaml  main.py
